# rspc

./: Cargo.toml  README.md  build.rs
rspc/: Cargo.toml  build.rs
rspc-macros/: Cargo.toml
rspc-macros/src/: lib.rs  main.rs
rspc/src/: lib.rs  main.rs
rspc/src/client/: channel.rs  error.rs  mod.rs  service.rs
rspc/src/example/: example.proto  mod.rs
rspc/src/protocol/: README.md  frame.rs
rspc/src/server/: channel.rs  error.rs  mod.rs  service.rs
src/: example.proto  example.rs  lib.rs  main.rs  protocol.rs
src/client/: channel.rs  error.rs  mod.rs  service.rs
src/example/: mod.rs
src/protocol/: README.md  frame.rs  mod.rs  service.rs
src/server/: channel.rs  error.rs  mod.rs  service.rs
