[package]
name = "rspc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "hello-client"
path = "src/bin/hello-rspc-client.rs"

[[bin]]
name = "hello-server"
path = "src/bin/hello-rspc-server.rs"

[dependencies]
prost = "0.9"
tokio = { version = "1", features = ["full"]}
thiserror = "1"
byteorder = "1"
bytes = "1"

[build-dependencies]
prost-build = "0.9"
